--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-heroku==0.3.1
 django-rest-passwordreset==1.2.0
 djangorestframework==3.12.4
 psycopg2==2.9.1
+python-decouple==3.5
 pytz==2021.3
 sqlparse==0.4.2
 whitenoise==5.3.0
